[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ara"
version = "0.1.0"
description = "Agent-Native Research Artifact (ARA) protocol: create, validate, and manage machine-executable research packages."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ARA implementation" }]
dependencies = [
    "pyyaml>=5.1",
]

[project.scripts]
ara = "ara.cli:main"

[tool.setuptools.packages.find]
include = ["ara*"]
